# py-sssd-inspector

./: README.md  mise.toml  pyproject.toml  sssd-inspector.py  sssd_error_patterns.yaml
src/sssd_inspector/: __init__.py  __main__.py  anonymize.py  cli.py  inspect.py
src/sssd_inspector/anonymizer/: __init__.py  engine.py
src/sssd_inspector/log_inspector/: __init__.py  core.py  orchestrator.py  patterns.py
src/sssd_inspector/tools/: supportconfig2sssd-logs.py  supportconfig_parser.py
