[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sssd-inspector"
version = "0.2.0"
description = "An error parser and hierarchical data anonymizer for SSSD logs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = ["pyright", "pytest", "ruff"]

[project.scripts]
sssd-inspector = "sssd_inspector.cli:main"
supportconfig2sssd-logs = "sssd_inspector.tools.supportconfig_parser:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sssd_inspector"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "Q",
    "ANN001",  # Enforce type hints on function arguments
    "ANN201",  # Enforce return types on public functions
    "ANN202",  # Enforce return types on private functions
]
